@@ -20,7 +20,7 @@ import java.time.format.DateTimeFormatter;
 import java.time.temporal.TemporalAdjusters;
 import java.util.*;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
 @Slf4j
 @Service
@@ -336,7 +336,7 @@ public class BookRuleEvaluatorService {
 
         List<ReadStatus> readStatuses = statuses.stream()
                 .map(ReadStatus::valueOf)
-                .collect(Collectors.toList());
+                .toList();
 
         sub.select(cb.literal(1L)).where(
                 cb.equal(subRoot.get("metadata").get("seriesName"), root.get("metadata").get("seriesName")),
@@ -578,7 +578,7 @@ public class BookRuleEvaluatorService {
     private Predicate buildStringPredicate(RuleField field, CriteriaQuery<?> query, Root<BookEntity> root,
                                            Join<BookEntity, UserBookProgressEntity> progressJoin,
                                            CriteriaBuilder cb,
-                                           java.util.function.Function<Expression<String>, Predicate> predicateBuilder) {
+                                           Function<Expression<String>, Predicate> predicateBuilder) {
         if (isArrayField(field)) {
             Subquery<Long> subquery = query.subquery(Long.class);
             Root<BookEntity> subRoot = subquery.from(BookEntity.class);
@@ -729,7 +729,7 @@ public class BookRuleEvaluatorService {
     }
 
     private Predicate buildFieldInPredicate(RuleField ruleField,
-                                            java.util.function.Function<Expression<?>, Expression<?>> fieldTransformer,
+                                            Function<Expression<?>, Expression<?>> fieldTransformer,
                                             List<String> ruleList,
                                             CriteriaBuilder cb,
                                             Root<BookEntity> root,
@@ -741,11 +741,11 @@ public class BookRuleEvaluatorService {
             boolean hasUnset = ruleList.stream().anyMatch("UNSET"::equals);
             List<String> nonUnsetValues = ruleList.stream()
                     .filter(v -> !"UNSET".equals(v))
-                    .collect(Collectors.toList());
+                    .toList();
 
             List<ReadStatus> statuses = nonUnsetValues.stream()
                     .map(ReadStatus::valueOf)
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (hasUnset && !statuses.isEmpty()) {
                 return cb.or(
@@ -759,7 +759,7 @@ public class BookRuleEvaluatorService {
             }
         }
 
-        List<String> lowerList = ruleList.stream().map(String::toLowerCase).collect(Collectors.toList());
+        List<String> lowerList = ruleList.stream().map(String::toLowerCase).toList();
         return cb.lower(field.as(String.class)).in(lowerList);
     }
 
@@ -879,7 +879,7 @@ public class BookRuleEvaluatorService {
 
             List<String> lowerValues = values.stream()
                     .map(String::toLowerCase)
-                    .collect(Collectors.toList());
+                    .toList();
 
             subquery.select(cb.literal(1L)).where(
                     cb.equal(subRoot.get("id"), root.get("id")),
@@ -920,7 +920,7 @@ public class BookRuleEvaluatorService {
         if (isNumericField(field)) {
             try {
                 return Double.parseDouble(value.toString());
-            } catch (NumberFormatException ignored) {
+            } catch (NumberFormatException _) {
             }
         }
 
@@ -947,7 +947,7 @@ public class BookRuleEvaluatorService {
         if (value instanceof List) {
             return ((Collection<?>) value).stream()
                     .map(Object::toString)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return Collections.singletonList(value.toString());
