@@ -18,6 +18,8 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.time.Instant;
 
 @RequiredArgsConstructor
 @Service
@@ -80,6 +82,10 @@ public class BookQueryService {
         return bookRepository.findAllFullBooks();
     }
 
+    public List<BookEntity> getAllFullBookEntitiesWithFiles() {
+        return bookRepository.findAllFullBooksWithFiles();
+    }
+
     @Transactional
     public void saveAll(List<BookEntity> books) {
         bookRepository.saveAll(books);
@@ -93,7 +99,7 @@ public class BookQueryService {
             if (embeddingJson != null && book.getMetadata() != null) {
                 if (!Objects.equals(book.getMetadata().getEmbeddingVector(), embeddingJson)) {
                     book.getMetadata().setEmbeddingVector(embeddingJson);
-                    book.getMetadata().setEmbeddingUpdatedAt(java.time.Instant.now());
+                    book.getMetadata().setEmbeddingUpdatedAt(Instant.now());
                 }
             }
         }
@@ -118,7 +124,7 @@ public class BookQueryService {
     private List<Book> mapBooksToDto(List<BookEntity> books, boolean includeDescription, Long userId, boolean stripForListView) {
         return books.stream()
                 .map(book -> mapBookToDto(book, includeDescription, userId, stripForListView))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Book mapBookToDto(BookEntity bookEntity, boolean includeDescription, Long userId, boolean stripForListView) {
