@@ -26,7 +26,6 @@ import tools.jackson.databind.ObjectMapper;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -45,7 +44,7 @@ public class UserService {
         return userRepository.findAllWithDetails()
                 .stream()
                 .map(bookLoreUserTransformer::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
